# robotinoMovement

./: .coverage  .gitignore  README.md  frames.gv  frames_2025-02-04_21.47.55.gv  frames_2025-02-06_10.46.35.gv  frames_2025-02-10_10.56.50.gv  frames_2025-02-10_10.58.52.gv  frames_2025-04-12_15.08.54.gv  important_commands.txt
src/robotino_hal/: package.xml  setup.cfg  setup.py
src/robotino_hal/config/: nav2_params.yaml  robot_params.yaml  rviz_config.rviz  slam_params.yaml
src/robotino_hal/description/: robotino.gv  robotino.urdf  robotino.urdf.xacro
src/robotino_hal/install/: local_setup.sh  setup.sh
src/robotino_hal/launch/: bringup.launch.py  display.launch.py  nav2.launch.py  nav2_bringup.launch.py  navigation.launch.py  social_nav.launch.py  test.launch.py  tmux_startup.sh  total.launch.py  total_launch.py
src/robotino_hal/log/: latest_build
src/robotino_hal/nodes/: battery_monitor.py  camera_monitor.py  lidar_monitor.py  motor_control.py  navigation.py  odometry_monitor.py  sensor_monitor.py  social_navigation.py
src/robotino_hal/robotino_hal/: battery_monitor.py  sensor_monitor.py
src/robotino_hal/robotino_hal/nodes/: motor_control.py  navigation.py  odometry_monitor.py  (+1 more)
src/robotino_hal/test/: mock_robotino_server.py  test_base.py  test_battery_monitor.py  test_camera_monitor.py  test_integration.py  test_motor_control.py  test_odometry_monitor.py
src/robotino_hal/tests/: test_battery_monitor.py  test_camera_monitor.py  test_copyright.py  test_flake8.py  test_motor_control.py  test_navigation.py  test_pep257.py  test_sensor_monitor.py
(+28 files in other folders)
