<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotino_hal</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mirashid@todo.todo">mirashid</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_common</depend>
  <depend>nav2_core</depend>
  <depend>rplidar_ros</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ros2-easy-test</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
